# sono

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CLAUDE.md  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  script.sh  vite.config.mjs
.claude/skills/commit/: SKILL.md
.claude/skills/translate-po/: SKILL.md
.claude/skills/upgrade-js-deps/: SKILL.md
.claude/skills/upgrade-python-deps/: SKILL.md
.github/instructions/: daisyui.instructions.md
apps/assessments/: config.py  constants.py  forms.py  models.py  permissions.py  urls.py  utils.py  views.py
apps/assessments/forms/: filters.py  professionals.py  questionnaire.py  settings.py
apps/assessments/migrations/: 0001_initial.py  0002_secure_child_identity.py  0003_alter_municipality_unique_together_and_more.py
apps/assessments/selectors/: evaluations.py  municipalities.py  overview.py  professionals.py  reports.py
apps/assessments/services/: capabilities.py  edsc_scoring.py  questionnaire_workflow.py
apps/assessments/tests/: test_access_and_constraints.py  test_edsc_reference.py  test_management_commands.py  test_questionnaire_flow.py
apps/assessments/views/: evaluations.py  mixins.py  municipalities.py  overview.py  reports.py  (+3 more)
apps/core/: formmixins.py  managers.py  middleware.py  models.py  schemas.py  utils.py  validators.py  viewmixins.py
apps/dashboard/: urls.py  views.py
apps/patients/: admin.py  config.py  constants.py  enums.py  filters.py  forms.py  managers.py  models.py  urls.py  views.py
apps/users/: adapters.py  admin.py  config.py  context_processors.py  enums.py  filters.py  forms.py  forms_admin.py  forms_allauth.py  managers.py  models.py  password_validation.py  signals.py  urls.py  utils.py  viewmixins.py  views.py
config/: celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
scripts/: db_clean.sh  db_seed.sh
static/css/: styles.css
static/js/: main.js
templates/: base.html
templates/account/: _base.html  account_inactive.html  base_confirm_code.html  base_entrance.html  base_manage.html  base_manage_email.html  base_manage_password.html  base_manage_phone.html  base_reauthenticate.html  confirm_email_verification_code.html  confirm_login_code.html  confirm_password_reset_code.html  email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  request_login_code.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
templates/assessments/: _base.html  questionnaire.html  results.html
templates/components/: alert.html
templates/dashboard/: admin.html  index.html  parent.html  specialist.html
templates/evaluations/: index.html
templates/municipalities/: index.html
templates/partials/: footer.html  header.html  password_toggle_script.html  scripts.html  sidebar.html  styles.html  toasts.html
templates/patients/: patient_create.html  patient_detail.html  patient_list.html  patient_update.html  questionnaire_wizard.html
templates/professionals/: index.html  invite.html  manage.html
templates/reports/: index.html  pdf_template.html
templates/users/: admin_create.html  admin_update.html  parent_create.html  parent_list.html  parent_update.html  profile.html  specialist_create.html  specialist_update.html  user_list.html
(+103 files in other folders)
